Fixed Footer layout issue

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,4 @@
 /* TODO add is Read indicator class */
-/* TODO layout issues - footer */
 
 /* Global Resets */
 *,
@@ -17,8 +16,9 @@ html {
 
 /* Body and Typography */
 body {
-    width: 100%;
-    height: 100vh;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
     background-color: #2e1065;
     line-height: 1.5;
     -webkit-font-smoothing: antialiased;
@@ -174,10 +174,7 @@ dialog {
 
 /* Footer */
 .footer {
-    /* TODO */
-    /* absolute value causes to float above content */
-    position: absolute;
-    bottom: 0;
+    margin-top: auto;
     display: flex;
     align-items: center;
     justify-content: center;
